@@ -49,6 +49,9 @@ Music *melisma_playing_req;
 
 Lyric_combine_music_iterator::Lyric_combine_music_iterator ()
 {
+  music_iter_ =0;
+  lyric_iter_ =0;
+
   if (!busy_req)
     {
       busy_req
@@ -56,9 +59,6 @@ Lyric_combine_music_iterator::Lyric_combine_music_iterator ()
       melisma_playing_req
 	= make_music_by_name (ly_symbol2scm ("MelismaPlayingEvent"));
     }
-  
-  music_iter_ =0;
-  lyric_iter_ =0;
 }
 
 Moment
