@@ -1,3 +1,12 @@
+2003-10-02  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
+
+	* lily/lyric-combine-music-iterator.cc
+	(Lyric_combine_music_iterator): change init order, to prevent GC
+	segfaults.
+
+	* lily/context-specced-music-iterator.cc (construct_children): 
+	only change  translator if found. This fixes a core dump problem.
+
 2003-10-01  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* buildscripts/install-info-html.sh: Use Bash.
